# ffmpeg_p_demo

./: .gitignore  CMakeLists.txt  README.MD
inc/: FFmpegDecoder.h  FFmpegEncoder.h
rtsp/: pictortsp.cpp
src/: FFmpegDecoder.cpp  FFmpegEncoder.cpp
thirdpart/: build.sh
